# slides

./: .gitignore  README.md  stack.yaml  useXturtle.cabal
app/: loveSwift19.hs
files/samples/handson2/: bmi.hs  circleArea.hs
files/samples/handson3/: astar.hs  calc.hs  dijkstra.hs  tmp.txt
ideas/haskellBeginnerLt/: memo.md
ideas/haskell_handson/: done.md  plan.md  schedule.md  timetable.md  todo.md
ideas/haskell_handson_2/: memo.md
ideas/haskell_handson_3/: memo.md
sandbox/: getOpt.hs
src/: Lecture.hs
useXturtle/: stack.yaml  useXturtle.cabal
useXturtle/app/: loveSwift19-0.hs  loveSwift19-1.hs  loveSwift19.hs
useXturtle/app/LoveSwift19_0/: Book.hs  Haskell.hs  SelfIntroduction.hs
useXturtle/app/haskellBeginnerLt/: beginnerLt.hs  beginnerLtYobi.hs
useXturtle/app/haskellHandson/: handson20170715-0.hs  handson20170715-1.hs  handson20170715-2.hs  handson20170715-3.hs  handson20170715-4.hs  handson20170715-5.hs  handson20170715-6.hs  handson20170715-I.hs
useXturtle/app/haskellHandson2/: handson20171119-0.hs  handson20171119-1.hs  handson20171119-10.hs  handson20171119-11.hs  handson20171119-2.hs  handson20171119-3.hs  handson20171119-4.hs  handson20171119-5.hs  handson20171119-6.hs  handson20171119-7.hs  handson20171119-8.hs  handson20171119-9.hs
useXturtle/loveSwift19/: haskell_slide.tar.bz2  slide.html  slide.md
useXturtle/loveSwift19/haskell_slide/: slide.html  slide.md
useXturtle/samples/: Field.hs  Some.hs  actoin.hs  addition.hs  calculator.hs  check.hs  janken.hs  kazuate.hs  kazuate_gen.hs  maze.hs  memo.hs  other.hs  recursion.hs  repetition.hs  some.txt  squareAndCircleData.hs  squareAndCircleType.hs  typing.hs  useCase.hs
useXturtle/sandbox/: montecarlo.hs
useXturtle/src/: Lecture.hs  Montecarlo.hs  Options.hs
useXturtle/src/LoveSwift19/: Book.hs  Haskell.hs  SelfIntroduction.hs
useXturtleSlide/haskellNyumonHandson3/: .gitignore  ChangeLog.md  README.md  calc.hs  circle.hs  package.yaml  stack.yaml
useXturtleSlide/haskellNyumonHandson3/app/: haskellNyumonHandson3_0.hs  haskellNyumonHandson3_1.hs  haskellNyumonHandson3_2.hs  haskellNyumonHandson3_3.hs  haskellNyumonHandson3_4.hs  haskellNyumonHandson3_5.hs  haskellNyumonHandson3_6.hs
useXturtleSlide/haskelldojo001/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
useXturtleSlide/haskelldojo001/app/: Main.hs
