name:                useXturtle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/useXturtle#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lecture, Montecarlo
  other-modules:       Options
  ghc-options:         -Wall -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, xturtle, random
  default-language:    Haskell2010

executable loveSwift19
  hs-source-dirs:      app
  main-is:             loveSwift19.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle
  default-language:    Haskell2010

test-suite useXturtle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, useXturtle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/useXturtle
