name:                useXturtle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/useXturtle#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lecture, Montecarlo
  other-modules:       Options
  ghc-options:         -Wall -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, xturtle, random, yjsvg, containers
  default-language:    Haskell2010

executable loveSwift19-0
  hs-source-dirs:      app, src
  main-is:             loveSwift19-0.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Montecarlo, Options
                       LoveSwift19_0.SelfIntroduction, LoveSwift19_0.Book,
                       LoveSwift19_0.Haskell

executable loveSwift19-1
  hs-source-dirs:      app, src
  main-is:             loveSwift19-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Montecarlo, Options

executable beginnerLt
  hs-source-dirs:      app/haskellBeginnerLt, src
  main-is:             beginnerLt.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable beginnerLtYobi
  hs-source-dirs:      app/haskellBeginnerLt, src
  main-is:             beginnerLtYobi.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20170715-0
  hs-source-dirs:      app/haskellHandson, src
  main-is:             handson20170715-0.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20170715-1
  hs-source-dirs:      app/haskellHandson, src
  main-is:             handson20170715-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20170715-2
  hs-source-dirs:      app/haskellHandson, src
  main-is:             handson20170715-2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20170715-3
  hs-source-dirs:      app/haskellHandson, src
  main-is:             handson20170715-3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20170715-4
  hs-source-dirs:      app/haskellHandson, src
  main-is:             handson20170715-4.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20170715-5
  hs-source-dirs:      app/haskellHandson, src
  main-is:             handson20170715-5.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20170715-6
  hs-source-dirs:      app/haskellHandson, src
  main-is:             handson20170715-6.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20170715-I
  hs-source-dirs:      app/haskellHandson, src
  main-is:             handson20170715-I.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20171119-0
  hs-source-dirs:      app/haskellHandson2, src
  main-is:             handson20171119-0.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20171119-1
  hs-source-dirs:      app/haskellHandson2, src
  main-is:             handson20171119-1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20171119-2
  hs-source-dirs:      app/haskellHandson2, src
  main-is:             handson20171119-2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

executable handson20171119-3
  hs-source-dirs:      app/haskellHandson2, src
  main-is:             handson20171119-3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, useXturtle, xturtle, random, yjsvg
  default-language:    Haskell2010
  other-modules:       Lecture, Options

test-suite useXturtle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, useXturtle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/useXturtle
